2007-08-06  Kevin B. Kenny  <kennykb@users.sf.net>

	* generic/tclGetDate.y: Added a cast to the definition of YYFREE to
	          	        silence compiler warnings.
	* generic/tclDate.c: Regenerated
	* win/tclWinTest.c: Added a cast to the call to 
	                    GetSecurityDescriptorDacl to silence compiler
			    warnings.
	
2007-08-04  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.decls:   Exporting via stubs to help
	* generic/tclInt.h:       itcl adapt to VarReform. Added
	* generic/tclIntDecls.h:  localCache initialization to
	* generic/tclProc.c:      TclInitCompiledLocals (which
	* generic/tclStubInit.c:  only exists for itcl).
	* generic/tclVar.c:


2007-08-01  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* library/word.tcl: Rewrote for greater efficiency. [Bug 1764318]

2007-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclInt.h:     Added a TclOffset macro ala Tk_Offset to
	* generic/tclVar.c:     abstract out 'offsetof' which may not be
	* generic/tclExceute.c: defined (eg: msvc6).

2007-08-01  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c (TclCleanupVar): fix [Bug 1765225], thx Larry
	Virden.

2007-07-31  Miguel Sofer  <msofer@users.sf.net>

	* doc/Hash.3:
	* generic/tclHash.c:
	* generic/tclObj.c:
	* generic/tclThreadStorage.c: (changes part of the patch below)
	Stop Tcl_CreateHashVar from resetting hPtr->clientData to NULL after
	calling the allocEntryProc for a custom table.

	* generic/tcl.h:
	* generic/tclBasic.c:
	* generic/tclCmdIL.c:
	* generic/tclCompCmds.c:
	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	* generic/tclHash.c:
	* generic/tclInt.decls:
	* generic/tclInt.h:
	* generic/tclIntDecls.h:
	* generic/tclLiteral.c:
	* generic/tclNamesp.c:
	* generic/tclObj.c:
	* generic/tclProc.c:
	* generic/tclThreadStorage.c:
	* generic/tclTrace.c:
	* generic/tclVar.c:   VarReform [Patch 1750051]

	*** POTENTIAL INCOMPATIBILITY *** (tclInt.h and tclCompile.h)